--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -1,10 +1,14 @@
 <!--pages/map/map.wxml-->
-<view>
-  <input bindinput='searchQuery'></input>  
-</view>
+
 <view class="map_container"> 
   <map class="map" id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="14" show-location="true" markers="{{markers}}" bindmarkertap="makertap"></map> 
 </view> 
+<view class='form-container'>
+  <form bindsubmit='formSubmit'>
+    <input id='formInput' placeholder='Enter Search query' name="query"></input> 
+    <button id='formSubmit' type='primary' form-type='submit'>submit</button>
+  </form>   
+</view>
 <view class="place_info"> 
   <text>{{placeData.title}}</text> 
   <text>{{placeData.address}}</text> 
