--- a/pages/hello/hello.wxss
+++ b/pages/hello/hello.wxss
@@ -1,1 +1,38 @@
 /* pages/Hello/hello.wxss */
+.image-size{
+  width: 32px;
+  height: 24px;
+}
+.weather{
+  font-size: 35px;
+  font-style: block;
+}
+.weather-sub{
+  font: 10px;
+}
+.textarea{
+  font-size: 20px;
+  font-style: block;
+}
+.page-section-spacing{
+  margin-top: 60rpx;
+}
+.scroll-view_H{
+  white-space: nowrap;
+}
+.scroll-view-item{
+  height: 300rpx;
+}
+.scroll-view-item_H{
+  display: inline-block;
+  width: 100%;
+  height: 300rpx;
+}
+
+.bc_green{
+  background: green;
+}
+
+.bc_blue{
+  background: blue;
+}
