--- a/pages/weather/weather.wxss
+++ b/pages/weather/weather.wxss
@@ -7,9 +7,6 @@
   font-size: 35px;
   font-style: block;
 }
-.weather-sub{
-  font: 10px;
-}
 .textarea{
   font-size: 20px;
   font-style: block;
@@ -21,16 +18,18 @@
   white-space: nowrap;
 }
 .scroll-view-item{
-  height: 300rpx;
+  height: 400rpx;
 }
 .scroll-view-item_H{
   display: inline-block;
   width: 100%;
-  height: 300rpx;
+  height: 400rpx;
 }
 
 .bc_green{
-  background: green;
+  font-size: 50rpx;
+  color: white;
+  background: #87CEEB;
 }
 
 .bc_blue{
